# databuf

./: AUTHORS  ChangeLog  Makefile.in  README  configure  configure.ac
src/: Makefile.am  Makefile.in  config.h.in  databuf.c  databuf.h  endianness.c  internals.h  read.c  seek.c  test-databuf.c  test-endianness.c  test-read.c  test-seek.c  test-write.c  write.c
